--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "deploy": "gh-pages -d dist"
   },
   "author": "",
   "license": "ISC",
@@ -25,6 +26,7 @@
     "webpack-stream": "^5.2.1"
   },
   "dependencies": {
+    "gh-pages": "^6.3.0",
     "jquery": "^3.7.1",
     "slick-carousel": "^1.8.1"
   }
